# echartsy

./: .gitignore  Documentation.md  EMPHASIS_PLAN.md  LICENSE  Monthly KPIS Revenue Growth Product Mix.html  README.md  capture_screenshots.py  examples.ipynb  generate_demos.py  pyproject.toml  requirements.txt  revenue_report.html
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
assets/: demo_area.html  demo_bar.html  demo_bar_pie.html  demo_boxplot.html  demo_composite.html  demo_composite_dark.html  demo_dark.html  demo_dashboard.html  demo_dual.html  demo_full_dashboard.html  demo_funnel.html  demo_gradient.html  demo_grouped.html  demo_heatmap.html  demo_histogram.html  demo_horizontal.html  demo_line.html  demo_multiline.html  demo_pie.html  demo_radar.html  demo_sankey.html  demo_scatter.html  demo_sidebyside_pies.html  demo_stacked.html  demo_timeline.html  demo_treemap.html
echartslib/: __init__.py  _config.py  _helpers.py  exceptions.py  figure.py  styles.py  timeline.py
echartslib/renderers/: __init__.py  _dispatch.py  _html_template.py  _jupyter.py  _python.py
echartsy/: __init__.py  _chart_methods.py  _config.py  _helpers.py  emphasis.py  exceptions.py  figure.py  styles.py  timeline.py
echartsy/renderers/: __init__.py  _dispatch.py  _html_template.py  _jupyter.py  _python.py  _streamlit.py
tests/: conftest.py  test_chart_methods.py  test_config.py  test_emphasis.py  test_figure_build.py  test_helpers.py  test_renderers.py  test_timeline.py
