[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echartslib"
version = "0.1.0"
description = "A matplotlib-style fluent builder API for Apache ECharts in Python, Jupyter Notebooks, and Streamlit."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jigar", email = "astrojigs24@gmail.com"},
]
keywords = ["echarts", "visualization", "charts", "jupyter", "plotting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Jupyter",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
jupyter = ["ipython>=7.0"]
streamlit = ["streamlit-echarts>=0.4.0"]
scipy = ["scipy>=1.9.0"]
all = ["ipython>=7.0", "streamlit-echarts>=0.4.0", "scipy>=1.9.0"]
dev = ["pytest>=7.0", "ipython>=7.0"]

[project.urls]
Homepage = "https://github.com/astrojigs/echartslib"
Documentation = "https://github.com/astrojigs/echartslib#readme"
Repository = "https://github.com/astrojigs/echartslib"

[tool.setuptools.packages.find]
include = ["echartslib*"]
