[build-system]
requires = ["setuptools>=68.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echartsy"
version = "0.6.4"
description = "A matplotlib-style fluent builder API for Apache ECharts in Python, Jupyter Notebooks, and Streamlit."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jigar", email = "astrojigs24@gmail.com"},
]
keywords = ["echarts", "visualization", "charts", "jupyter", "plotting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Jupyter",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
jupyter = ["ipython>=7.0"]
streamlit = ["streamlit>=1.20.0"]
scipy = ["scipy>=1.9.0"]
all = ["ipython>=7.0", "streamlit>=1.20.0", "scipy>=1.9.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ipython>=7.0"]

[project.urls]
Homepage = "https://github.com/astrojigs/echartsy"
Documentation = "https://github.com/astrojigs/echartsy#readme"
Repository = "https://github.com/astrojigs/echartsy"

[tool.setuptools.packages.find]
include = ["echartsy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["echartsy"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
